--- a/assets/scss/_properties.scss
+++ b/assets/scss/_properties.scss
@@ -56,6 +56,7 @@
     border-radius: $border-radius-sm;
     background: $main-bg;
     overflow-y: auto ;
+    z-index: 99999;
     @include vieport-md{
       height: 17rem;
       bottom: -18rem;
